[package]
name = "loggy"
description = "A simple log parser and analyzer tool running in the terminal."
authors = [ "Burak Selim Senyurt" ]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
colorized = "1.0.0"
notify = "8.2.0"
rayon = "1.11.0"
regex = "1.12.1"
textplots = "0.8.7"
