[package]
name = "sys-tower"
version = "0.1.0"
edition = "2024"
authors = ["Burak Selim Senyurt"]
description = "A simple system monitoring tool written in Rust."
license = "MIT"
repository = "https://github.com/buraksenyurt/tools"

[dependencies]
sysinfo = "0.37.2"
utility = { path = "../utility", package = "utility" }
